Added public API v0  (#20)
