# internal/handler/twitter.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"errors"
 	"fmt"
+	"math"
 	"time"
 
 	"github.com/go-playground/validator/v10"
@@ -23,14 +24,16 @@ type TwitterManager struct {
 	requestValidator *validator.Validate
 	fetcher          twitter.TweetsFetcher
 	classifier       predictor.FakeNewsClassifier
+	entityStorage    EntityStorage
 }
 
-func NewTwitterManager(validator *validator.Validate, fetcher twitter.TweetsFetcher, classifier predictor.FakeNewsClassifier) (*TwitterManager, error) {
+func NewTwitterManager(validator *validator.Validate, fetcher twitter.TweetsFetcher, classifier predictor.FakeNewsClassifier, entityStorage EntityStorage) (*TwitterManager, error) {
 
 	m := TwitterManager{
 		fetcher:          fetcher,
 		classifier:       classifier,
 		requestValidator: validator,
+		entityStorage:    entityStorage,
 	}
 
 	err := m.validate()
@@ -55,7 +58,23 @@ func (m TwitterManager) validate() error {
 		return errors.New("request validator is nil")
 	}
 
+	if m.entityStorage == nil {
+		return errors.New("entity storage is nil")
+	}
+
 	return nil
+}
+
+type Classification int
+
+const (
+	Real Classification = 1
+	Fake Classification = 0
+)
+
+type tweet struct {
+	Content string
+	Score   Classification
 }
 
 func (m *TwitterManager) GetTweets(ctx context.Context, request api.GetTweetsRequest, log *logrus.Entry) (api.GetTweetsResponse, error) {
@@ -89,9 +108,15 @@ func (m *TwitterManager) GetTweets(ctx context.Context, request api.GetTweetsReq
 		}
 	}
 
+	entityId, err := m.entityStorage.GetEntity(request.EntityID)
+	if err != nil {
+		log.WithError(err).Error("[TwitterManager] Failed to get entity by id")
+		return api.GetTweetsResponse{}, fmt.Errorf("[TwitterManager] storage error: %w", err)
+	}
+
 	fetchRequest := twitter.FetchTweetsRequest{
 		MaxResults: maxResults,
-		EntityID:   request.EntityID,
+		EntityID:   entityId.TwitterId,
 		StartTime:  from,
 		EndTime:    to,
 	}
@@ -100,6 +125,10 @@ func (m *TwitterManager) GetTweets(ctx context.Context, request api.GetTweetsReq
 
 	if err != nil {
 		return api.GetTweetsResponse{}, fmt.Errorf("error while fetching tweets: %w", err)
+	}
+
+	if len(resp) == 0 {
+		return api.GetTweetsResponse{}, nil
 	}
 
 	classifyRequest := make([]string, len(resp))
@@ -115,18 +144,48 @@ func (m *TwitterManager) GetTweets(ctx context.Context, request api.GetTweetsReq
 		return api.GetTweetsResponse{}, fmt.Errorf("error in mismatched number of classifications: %w", err)
 	}
 
-	tweets := make([]api.Tweet, len(resp))
+	tweets := toDomainTweets(resp, classifyResp.Classification)
 
-	for i, t := range resp {
-		tweets[i] = api.Tweet{
-			ID:            t.ID,
-			Content:       t.Text,
-			CreatedAt:     t.CreatedAt,
-			RealnessScore: float32(classifyResp.Classification[i]),
+	return api.GetTweetsResponse{
+		Result: getAnalytics(tweets),
+	}, nil
+}
+
+func toDomainTweets(tweets twitter.FetchTweetsResponse, classifications []predictor.Classification) []tweet {
+	dts := make([]tweet, len(tweets))
+
+	for i, t := range tweets {
+		dts[i] = tweet{
+			Content: t.Text,
+			Score:   Classification(classifications[i]),
 		}
 	}
 
-	return api.GetTweetsResponse{
-		Tweets: tweets,
-	}, nil
+	return dts
+}
+
+func getAnalytics(tweets []tweet) api.Analytics {
+	a := api.Analytics{
+		Total: len(tweets),
+	}
+
+	var authentic int
+	var unauthentic int
+	for _, t := range tweets {
+		if t.Score == Real {
+			authentic++
+		} else {
+			unauthentic++
+		}
+	}
+
+	a.Authentic = roundFloat((float64(authentic)/float64(a.Total))*100, 1)
+	a.Unauthentic = roundFloat((float64(unauthentic)/float64(a.Total))*100, 1)
+
+	return a
+}
+
+func roundFloat(val float64, precision uint) float32 {
+	ratio := math.Pow(10, float64(precision))
+	return float32(math.Round(val*ratio) / ratio)
 }
