# pkg/api/entities.go
@@ -3,7 +3,8 @@ package api
 type EntitiesResponse []Entity
 
 type Entity struct {
-	Id          string `json:"id"`
-	TwitterId   string `json:"twitterId"`
-	DisplayName string `json:"displayName"`
+	Id            string `json:"id"`
+	TwitterId     string `json:"twitterId"`
+	DisplayName   string `json:"displayName"`
+	TwitterHandle string `json:"twitterHandle"`
 }
