# pkg/api/twitter.go
@@ -6,17 +6,16 @@ type GetTweetsRequest struct {
 	EntityID   string    `json:"entityId"`
 	From       time.Time `json:"from"`
 	To         time.Time `json:"to"`
-	MaxResults int       `json:"maxResults" validate:"gte=5,lte=100"`
+	MaxResults int       `json:"maxResults"`
 }
 
 type GetTweetsResponse struct {
-	Error  string  `json:"error,omitempty"`
-	Tweets []Tweet `json:"tweets"`
+	Error  string    `json:"error,omitempty"`
+	Result Analytics `json:"result"`
 }
 
-type Tweet struct {
-	ID            string    `json:"id"`
-	Content       string    `json:"content"`
-	CreatedAt     time.Time `json:"createdAt"`
-	RealnessScore float32   `json:"realnessScore"`
+type Analytics struct {
+	Total       int     `json:"total"`
+	Authentic   float32 `json:"authentic"`
+	Unauthentic float32 `json:"unauthentic"`
 }
